fix: sonar finding .toList()